--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí haremos blog post</h1>
-        <p>Parrafo de blogpost</p>
+        <div id="container">
+            <div id="post">
+            <h1>Título de primer post</h1>
+              <p>Éste es el páarrafo del primer post
+                 que se está haciendo para trabajar
+                con git</p>
+            </div>
+        </div>
     </body>
 </html>
