--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Aquí inicia la cabecera
+            </div>
             <div id="post">
             <h1>Título de primer post</h1>
               <p>Éste es el páarrafo del primer post
