Finalizada cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Aquí inicia la cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
             <h1>Título de primer post</h1>
