--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,12 @@
               <p>Éste es el páarrafo del primer post
                  que se está haciendo para trabajar
                 con git</p>
+                <p>
+                    Parrafo adicional agregado desde 
+                    rama master con checkout incluido, teníamos
+                    cabecera modificada en rama cabecera, pero
+                    hicimos checkout a master...
+                </p>
             </div>
         </div>
     </body>
