Agregué subscripción modificacion cabecera  y todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestrp</span>
             </div>
             <div id="post">
             <h1>Título de primer post</h1>
@@ -19,6 +19,9 @@
                     rama master con checkout incluido, teníamos
                     cabecera modificada en rama cabecera, pero
                     hicimos checkout a master...
+                </p>
+                <p>
+                    Suscríbete y dale like
                 </p>
             </div>
         </div>
