Actualizacion despues de intento pull

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
             </div>
             <div id="post">
             <h1>Título de primer post</h1>
-              <p>Éste es el páarrafo del primer post
+              <p>Éste es el párrafo del primer post
                  que se está haciendo para trabajar
                 con git</p>
                 <p>
