Una version de hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Binvenidos a HyperBlog</title>
+        <title>Binvenidos a HyperBlog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
