--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,9 @@
                     Suscríbete y dale like
                 </p>
             </div>
+            <div id="footer">
+                Hecho por noitafer
+            </div>
         </div>
     </body>
 </html>
