--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,7 @@
                 </p>
             </div>
             <div id="footer">
-                Hecho por noitafer
+                Hecho por noitafer, Esta parte está agregada desde contribucion
             </div>
         </div>
     </body>
